src/warcraft/components/correct/tests/MineTestsCorrect.java
package warcraft.components.correct.tests;

import warcraft.components.correct.Mine;
import warcraft.components.tests.AbstractMineTests;

public class MineTestsCorrect extends AbstractMineTests {

	@Override
	public void before() {
		this.mine=new Mine();
	}

}
